crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_activation_relu_output.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: output
---
[
    0.0,
    0.0,
    0.0,
    1.0,
    2.0,
]
