crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_activation_silu_output.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: output
---
[
    -0.23840584,
    -0.26894143,
    0.0,
    0.7310586,
    1.761594,
]
