crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_activation_type_variants.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: variants
---
[
    ReLU,
    LeakyReLU(
        0.01,
    ),
    GELU,
    GELUTanh,
    SiLU,
    Swish(
        1.0,
    ),
    Sigmoid,
    Tanh,
    HardSigmoid,
    HardSwish,
    Mish,
    Softplus,
    ELU(
        1.0,
    ),
    SELU,
    QuickGELU,
]
