crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_attention_config_mha.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
assertion_line: 92
expression: config
---
AttentionConfig {
    num_heads: 8,
    head_dim: 64,
    seq_len: 128,
    causal: true,
    use_alibi: false,
    scale: None,
}
