crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_attention_config_zero_heads_error.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: err.to_string()
---
Kernel error: Invalid arguments: num_heads must be > 0
