crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_attention_resolved_scale_explicit.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: "format!(\"{:.6}\", config.resolved_scale())"
---
0.050000
