crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_batch_norm_config_64_features.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
BatchNormConfig {
    num_features: 64,
    eps: 1e-5,
    momentum: 0.1,
    training: false,
}
