crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_batch_norm_config_default.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: config
---
BatchNormConfig {
    num_features: 1,
    eps: 1e-5,
    momentum: 0.1,
    training: false,
}
