crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_capability_matrix_builtin_profile_count.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: names
---
[
    "Intel Arc A770",
    "NVIDIA RTX 4090",
    "Apple M1",
    "CPU SIMD (AVX2)",
    "CPU Scalar",
]
