crates/bitnet-kernels/tests/snapshots/snapshot_wave_16__snap_compatibility_report_cpu_scalar_binary.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_16.rs
expression: report.to_string()
---
CPU Scalar (CPU Scalar): READY — 2/2 required ops supported
